@@ -289,16 +289,23 @@ void attribute_visible R_init_Matrix(DllInfo *info)
 	RREGDEF(cholmod_aat);
 	RREGDEF(cholmod_add);
 	RREGDEF(cholmod_allocate_dense);
+	RREGDEF(cholmod_allocate_factor);
 	RREGDEF(cholmod_allocate_sparse);
 	RREGDEF(cholmod_allocate_triplet);
 	RREGDEF(cholmod_analyze);
 	RREGDEF(cholmod_analyze_p);
 	RREGDEF(cholmod_band_inplace);
 	RREGDEF(cholmod_change_factor);
+	RREGDEF(cholmod_check_common);
+	RREGDEF(cholmod_check_dense);
+	RREGDEF(cholmod_check_factor);
+	RREGDEF(cholmod_check_sparse);
+	RREGDEF(cholmod_check_triplet);
 	RREGDEF(cholmod_copy);
 	RREGDEF(cholmod_copy_dense);
 	RREGDEF(cholmod_copy_factor);
 	RREGDEF(cholmod_copy_sparse);
+	RREGDEF(cholmod_copy_triplet);
 	RREGDEF(cholmod_defaults);
 	RREGDEF(cholmod_dense_to_sparse);
 	RREGDEF(cholmod_factor_to_sparse);
@@ -309,6 +316,7 @@ void attribute_visible R_init_Matrix(DllInfo *info)
 	RREGDEF(cholmod_free_factor);
 	RREGDEF(cholmod_free_sparse);
 	RREGDEF(cholmod_free_triplet);
+	RREGDEF(cholmod_horzcat);
 	RREGDEF(cholmod_nnz);
 	RREGDEF(cholmod_scale);
 	RREGDEF(cholmod_sdmult);
